azure-quickstart-template/update-nsg.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "networkSecurityGroupName":{
      "type":"string"
    },
    "nsgResourceAPIVersion":{
      "type":"string"
    },
    "location":{
      "type":"string"
    }
  },
  "resources": [
    {
      "apiVersion": "[parameters('nsgResourceAPIVersion')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "SSH_116",
            "properties": {
              "description": "Allows SSH traffic to 52.88.35.116/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.88.35.116/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_7",
            "properties": {
              "description": "Allows SSH traffic to 52.37.120.7/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.37.120.7/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_144",
            "properties": {
              "description": "Allows SSH traffic to 50.112.20.144/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "50.112.20.144/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_60",
            "properties": {
              "description": "Allows SSH traffic to 34.211.1.60/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "34.211.1.60/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_237",
            "properties": {
              "description": "Allows SSH traffic to 34.210.228.237/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "34.210.228.237/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 104,
              "direction": "Inbound"
            }
          },
          {
            "name": "SSH_120",
            "properties": {
              "description": "Allows SSH traffic to 52.26.206.120/32",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "52.26.206.120/32",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 105,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ]
}
